cmake_minimum_required(VERSION 3.26)
project(C)

set(CMAKE_CXX_STANDARD 17)

add_executable(C SqList.cpp
        HalfNumber.cpp
        philosopherProblem.cpp
        2010SortProblem.cpp
        2013MainElem.cpp
        2018.cpp
        SingleLinkList.cpp
        BankerAlgorithm.cpp
        "2009 1st.cpp"
        2012.cpp
        2015.cpp
        SqStack.cpp
        SqQueue.cpp
        SqCirQueue.cpp
        LinktQueue.cpp
        SqString.cpp
        LInkString.cpp
        KMP_Match.cpp
        SqBitree.cpp
        LinkBiTree.cpp
        OPT_Algorithm.cpp
        FIFO_Algorithm.cpp
        LRU_Algorithm.cpp
        ChangeAddress.cpp
        ExternalStorageAllocation.cpp
        IdelTableAlgorithm.cpp
        ReaderAndWriterProblem.cpp
        ThreadBiTree.cpp
)
